fixed donate link

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ title: Home
 						<a href="http://dx.doi.org/10.1016/0010-4655(91)90130-D">Comput. Phys. Commun., 64, 345-359, 1991</a>.</li>
 		</ul>
 		<p>You may also donate any amount for coffee and travel to the developers:</p>
-		<a href="donate.html">
+		<a href="https://feyncalc.org/donate.html">
 		<img class="paypal_button" alt="Make a donation to the FeynCalc Project using PayPal - it's fast, free and secure!" name="submit" src="Images/x-click-but04.gif"></a>
 	</div>
 </div>
