feyncalc.org not registered, only www.feyncalc.org

--- a/_pages/forum.html
+++ b/_pages/forum.html
@@ -5,7 +5,7 @@ permalink: /forum
 ---
 
 <div id="content">
-    <iframe src="https://feyncalc.org/forum/" name="frame2" id="frame2" frameborder="0" marginwidth="0" marginheight="10" scrolling="auto"
+    <iframe src="https://www.feyncalc.org/forum/" name="frame2" id="frame2" frameborder="0" marginwidth="0" marginheight="10" scrolling="auto"
     onload="" allowtransparency="false"></iframe>
 </div>
 
