Minor content updates.

--- a/_pages/Impressum.html
+++ b/_pages/Impressum.html
@@ -8,17 +8,17 @@ permalink: /impressum
 
 <h2>Angaben gemäß § 5 TMG:</h2>
 <p>Vladyslav Shtabovenko<br />
-James-Franck-Str. 1<br />
-Technische Universität München<br />
-Fakultät für Physik <br />
-85748 Garching
+Wolfgang-Gaede-Straße 1<br />
+Institut für Theoretische Teilchenphysik (TTP)<br />
+Karlsruher Institut für Technologie (KIT)<br />
+76131 Karlsruhe
 </p>
 <h2>Kontakt:</h2>
 <table><tr>
 <td>Telefon:</td>
-<td>+49 89 289-12492</td></tr>
+<td>+49(0)721 608-48365</td></tr>
 <tr><td>E-Mail:</td>
-<td>v.shtabovenko@tum.de</td>
+<td>v.shtabovenko@kit.edu </td>
 </tr></table>
 <p> </p>
 
