--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@ title: Home
 
     <p>FeynCalc is covered by the GNU General Public License 3.</p>
 
-    <p>Copyright &copy; 1990-2016 Rolf Mertig, Copyright &copy; 1997-2016 Frederik Orellana,
-    Copyright &copy; 2014-2016 Vladyslav Shtabovenko</li></p>
+    <p>Copyright &copy; 1990-2020 Rolf Mertig</p>
+    <p>Copyright &copy; 1997-2020 Frederik Orellana,</p>
+    Copyright &copy; 2014-2020 Vladyslav Shtabovenko</li></p>
 
     <p>FeynCalc is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as
@@ -88,13 +89,17 @@ title: Home
     <p>Questions can be posted in the <a href="/forum">forum</a>. New releases etc. are announced on the <a href="/news">news</a> page.</p>
 
     <p>To support FeynCalc, please acknowledge our work when you use FeynCalc in your research.
-    You can do so by citing the two FeynCalc papers:</p>
+    You can do so by citing the following FeynCalc papers:</p>
     <ul>
-      <li>V. Shtabovenko, R. Mertig and F. Orellana, "New Developments in FeynCalc 9.0",
+
+      <li><p>V. Shtabovenko, R. Mertig and F. Orellana, "FeynCalc 9.3: New features and improvements",
+          <a href="http://arxiv.org/abs/2001.04407">arXiv:2001.04407</a>.</p></li>
+
+      <li><p>V. Shtabovenko, R. Mertig and F. Orellana, "New Developments in FeynCalc 9.0",
           <a href="http://dx.doi.org/10.1016/j.cpc.2016.06.008">Comput. Phys. Commun., 207, 432-444, 2016</a>,
-          <a href="http://arxiv.org/abs/1601.01167">arXiv:1601.01167</a>.</li>
-      <li>R. Mertig, M. B&ouml;hm, and A. Denner, "Feyn Calc - Computer-algebraic calculation of Feynman amplitudes",
-            <a href="http://dx.doi.org/10.1016/0010-4655(91)90130-D">Comput. Phys. Commun., 64, 345-359, 1991</a>.</li>
+          <a href="http://arxiv.org/abs/1601.01167">arXiv:1601.01167</a>.</p></li>
+      <li><p>R. Mertig, M. B&ouml;hm, and A. Denner, "Feyn Calc - Computer-algebraic calculation of Feynman amplitudes",
+            <a href="http://dx.doi.org/10.1016/0010-4655(91)90130-D">Comput. Phys. Commun., 64, 345-359, 1991</a>.</p></li>
     </ul>
 <!--
     <p>You may also donate any amount for coffee and travel to the developers:</p>
