--- a/_pages/Datenschutz.html
+++ b/_pages/Datenschutz.html
@@ -9,13 +9,13 @@ permalink: /datenschutz
 <h2>Datenschutzerklärung</h2><h3 id="dsg-general-intro"></h3><p>Diese Datenschutzerklärung klärt Sie über die Art, den Umfang und Zweck der Verarbeitung von personenbezogenen Daten (nachfolgend kurz „Daten“) innerhalb unseres Onlineangebotes und der mit ihm verbundenen Webseiten, Funktionen und Inhalte sowie externen Onlinepräsenzen, wie z.B. unser Social Media Profile auf (nachfolgend gemeinsam bezeichnet als „Onlineangebot“). Im Hinblick auf die verwendeten Begrifflichkeiten, wie z.B. „Verarbeitung“ oder „Verantwortlicher“ verweisen wir auf die Definitionen im Art. 4 der Datenschutzgrundverordnung (DSGVO).<br>
 <br>
 </p><h3 id="dsg-general-controller">Verantwortlicher</h3><p><span class="tsmcontroller">Vladyslav Shtabovenko<br>
-James-Franck-Str. 1<br>
-Technische Universität München<br>
-Fakultät für Physik<br>
-85748 Garching <br>
+Wolfgang-Gaede-Straße 1<br>
+Institut für Theoretische Teilchenphysik (TTP)<br>
+Karlsruher Institut für Technologie (KIT)<br>
+76131 Karlsruhe <br>
 <br>
-Telefon:        +49 89 289-12492<br>
-E-Mail:         v.shtabovenko@tum.de</span></p><h3 id="dsg-general-datatype">Arten der verarbeiteten Daten:</h3><p>-    Bestandsdaten (z.B., Namen, Adressen).<br>
+Telefon:        +49(0)721 608-48365<br>
+E-Mail:         v.shtabovenko@kit.edu</span></p><h3 id="dsg-general-datatype">Arten der verarbeiteten Daten:</h3><p>-    Bestandsdaten (z.B., Namen, Adressen).<br>
 -       Kontaktdaten (z.B., E-Mail, Telefonnummern).<br>
 -       Inhaltsdaten (z.B., Texteingaben, Fotografien, Videos).<br>
 -       Nutzungsdaten (z.B., besuchte Webseiten, Interesse an Inhalten, Zugriffszeiten).<br>
