Integrated examples into the website.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Home
         Tools and Tables for Quantum Field Theory Calculations
         <div class="buttons">
         <a class="btn btn-primary btn-large" href="https://github.com/FeynCalc/feyncalc/wiki/Installation">Install &raquo;</a>
-        <a class="btn btn-info btn-large" href="https://github.com/FeynCalc/feyncalc/tree/master/FeynCalc/Examples">Run examples &raquo;</a>
+        <a class="btn btn-info btn-large" href="/examples">Example gallery &raquo;</a>
         </div>
     </div>
   </div>
