Corrected installation instruction (Issue #4)

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@ title: Home
     <p>For installation instructions please follow the steps outlined in our
     <a href="https://github.com/FeynCalc/feyncalc/wiki">wiki</a>.
     The impatient can simply type
-    <pre><small>Import["https://raw.githubusercontent.com/FeynCalc/feyncalc/master/install.m"]; InstallFeynCalc[]</small></pre>
+    <pre><small>Import["https://raw.githubusercontent.com/FeynCalc/feyncalc/master/install.m"];
+<br>InstallFeynCalc[]</small></pre>
     in a <i>Mathematica</i> session.</p>
 
     <p>The code may also be viewed and downloaded from our <a href="https://github.com/FeynCalc">GitHub repository</a>.</p>
