--- a/FeynCalcBookDev/FCReloadFunctionFromFile.html
+++ b/FeynCalcBookDev/FCReloadFunctionFromFile.html
@@ -26,7 +26,7 @@
 <p>It is intended to be a helper tool for FeynCalc developers, which allows one to debug/improve internal functions and test the results without restarting the kernel. Depending on the complexity of the given function, there might also be unknown side effects.</p>
 <p>The function is not meant to be invoked by the normal users.</p>
 <h3 id="see-also">See also</h3>
-<p><a href="Extra/FeynCalc.html">Overview</a></p>
+<p><a href="Extra/FeynCalc.html">Overview</a>, <a href="FCReloadAddOns.html">FCReloadAddOns</a>.</p>
 <h3 id="examples">Examples</h3>
 </body>
 </html>
