Dev docu updated.

--- a/FeynCalcBookDev/OPEInt.html
+++ b/FeynCalcBookDev/OPEInt.html
@@ -24,7 +24,7 @@
 <h2 id="opeint">OPEInt</h2>
 <p><code>OPEInt[expr, q, p, x]</code> calculates 1-loop OPE-type self energies.</p>
 <h3 id="see-also">See also</h3>
-<p><a href="Extra/FeynCalc.html">Overview</a>, <a href="RHI.html">RHI</a>.</p>
+<p><a href="Extra/FeynCalc.html">Overview</a>.</p>
 <h3 id="examples">Examples</h3>
 </body>
 </html>
