--- a/FeynCalcBookDev/OPEIntegrate.html
+++ b/FeynCalcBookDev/OPEIntegrate.html
@@ -24,7 +24,7 @@
 <h2 id="opeintegrate">OPEIntegrate</h2>
 <p><code>OPEIntegrate[expr, q, x]</code> calculates a one-loop OPE-type integral.</p>
 <h3 id="see-also">See also</h3>
-<p><a href="Extra/FeynCalc.html">Overview</a>, <a href="RHI.html">RHI</a>.</p>
+<p><a href="Extra/FeynCalc.html">Overview</a>.</p>
 <h3 id="examples">Examples</h3>
 </body>
 </html>
