--- a/FeynCalcBookDev/OPEIntegrateDelta.html
+++ b/FeynCalcBookDev/OPEIntegrateDelta.html
@@ -40,7 +40,7 @@
 <p>The Mathematica <code>Integrate</code> function is called and each integration (from <span class="math inline">0</span> to <span class="math inline">1</span>) is recorded for reference (and bug-checking) in the list <code>$MIntegrate</code>.</p>
 <p>Notice that the dimension specified by the option should also be the dimension used in <code>expr</code>. It is replaced in OPEIntegrateDelta by (<code>4+Epsilon</code>).</p>
 <h3 id="see-also">See also</h3>
-<p><a href="Extra/FeynCalc.html">Overview</a>, <a href="RHI.html">RHI</a>.</p>
+<p><a href="Extra/FeynCalc.html">Overview</a>.</p>
 <h3 id="examples">Examples</h3>
 </body>
 </html>
