--- a/FeynCalcBookDev/QuarkMass.html
+++ b/FeynCalcBookDev/QuarkMass.html
@@ -22,9 +22,9 @@
 <h1 class="title">FeynCalc manual (development version)</h1>
 </header>
 <h2 id="quarkmass">QuarkMass</h2>
-<p><code>QuarkMass</code> is an option of <code>Amplitude</code>, <code>CounterTerm</code> and <code>RTL</code>.</p>
+<p><code>QuarkMass</code> is an option of <code>Amplitude</code> and <code>CounterTerm</code>.</p>
 <h3 id="see-also">See also</h3>
-<p><a href="Extra/FeynCalc.html">Overview</a>, <a href="Amplitude.html">Amplitude</a>, <a href="CounterTerm.html">CounterTerm</a>, <a href="RTL.html">RTL</a>.</p>
+<p><a href="Extra/FeynCalc.html">Overview</a>, <a href="Amplitude.html">Amplitude</a>, <a href="CounterTerm.html">CounterTerm</a>.</p>
 <h3 id="examples">Examples</h3>
 </body>
 </html>
