--- a/FeynCalcBookDev/LarinMVV.html
+++ b/FeynCalcBookDev/LarinMVV.html
@@ -35,8 +35,8 @@
 <header id="title-block-header">
 <h1 class="title">FeynCalc manual (development version)</h1>
 </header>
-<h2 id="west">West</h2>
-<p><code>West</code> is an option for <code>DiracTrace</code> and several other functions that deal with traces of Dirac matrices. The option applies only to the computation of <span class="math inline">D</span>-dimensional traces with an odd number of <span class="math inline">\gamma ^5</span> in the Breitenlohner-Maison-t’Hooft-Veltman (BMHV) scheme. With <code>West -&gt; True</code> (default setting), such traces are computed according to formula (A.5) from Comp. Phys. Comm 77 (1993) 286-298, which is also known as West’s formula. For more details, see the documentation of DiracTrace.</p>
+<h2 id="larinmvv">LarinMVV</h2>
+<p><code>LarinMVV</code> is an option for <code>DiracTrace</code> and several other functions that deal with traces of Dirac matrices. The option applies only to the computation of <span class="math inline">D</span>-dimensional traces with a single <span class="math inline">\gamma ^5</span> in the Larin scheme. With <code>LarinMVV -&gt; True</code> (default setting), such traces are computed according to Eq. (10) from <a href="https://arxiv.org/pdf/1506.04517.pdf">arXiv:1506.04517</a> by S. Moch, J. A. M. Vermaseren and A. Vogt.</p>
 <h3 id="see-also">See also</h3>
 <p><a href="Extra/FeynCalc.html">Overview</a>, <a href="DiracTrace.html">DiracTrace</a>.</p>
 <h3 id="examples">Examples</h3>
