--- a/FeynCalcBookDev/Extra/Indices.html
+++ b/FeynCalcBookDev/Extra/Indices.html
@@ -22,7 +22,9 @@
 <header id="title-block-header">
 <h1 class="title">FeynCalc manual (development version)</h1>
 </header>
-<h1 id="upper-and-lower-indices">Upper and lower indices</h1>
+<h2 id="upper-and-lower-indices">Upper and lower indices</h2>
+<h3 id="see-also">See also</h3>
+<p><a href="FeynCalc.html">Overview</a>.</p>
 <p>Here we list a set of rules that allows to reconstruct the positions of indices (upstairs or downstairs) appearing in FeynCalc expressions</p>
 <ul>
 <li><p>Every expression must satisfy Einsteins’s summation convention, both for Lorentz and Cartesian indices. Single terms containing more than two identical Lorentz or Cartesian indices are illegal and will lead to inconsistent results.</p></li>
