--- a/FeynCalcBookDev/Extra/FeynCalc.html
+++ b/FeynCalcBookDev/Extra/FeynCalc.html
@@ -131,6 +131,7 @@
 <li><a href="../ExpandAll2.html">ExpandAll2</a> - alternative to Mathematica’s <code>ExpandAll</code></li>
 <li><a href="../Explicit.html">Explicit</a> - inserts explicit expressions for certain objects</li>
 <li><a href="../Factor1.html">Factor1</a>, <a href="../Factor2.html">Factor2</a> - alternatives to Mathematica’s <code>Factor</code></li>
+<li><a href="../FactorList2.html">FactorList2</a> - alternative to Mathematica’s <code>FactorList2</code></li>
 <li><a href="../FC.html">FC</a> - changes the output format to <a href="../FeynCalcForm.html">FeynCalcForm</a></li>
 <li><a href="../FCAbbreviate.html">FCAbbreviate</a> - introduces abbreviations</li>
 <li><a href="../FCAntiSymmetrize.html">FCAntiSymmetrize</a> - antisymmetrizes with respect to the given variables</li>
@@ -317,7 +318,7 @@
 <li><a href="../FCHideEpsilon.html">FCHideEpsilon</a> - substitutes <span class="math inline">\frac{1}{\varepsilon} - \Gamma_E + \log (4 \pi)</span> with <span class="math inline">\Delta</span></li>
 <li><a href="../FCShowEpsilon.html">FCShowEpsilon</a> - substitutes <span class="math inline">\Delta</span> with <span class="math inline">\frac{1}{\varepsilon} - \Gamma_E + \log (4 \pi)</span></li>
 <li><a href="../FCIntegral.html">FCIntegral</a> - head of loop integrals</li>
-<li><a href="../FCFeynmanParameterJoin.html">FCFeynmanParameterJoin</a>, <a href="../FCFeynmanParametrize.html">FCFeynmanParametrize</a>, <a href="../FCFeynmanPrepare.html">FCFeynmanPrepare</a>, <a href="../FCFeynmanProjectivize.html">FCFeynmanProjectivize</a> - derivation and manipulation of Feynman parameter integrals</li>
+<li><a href="../FCFeynmanFindDivergences.html">FCFeynmanFindDivergences</a>, <a href="../FCFeynmanRegularizeDivergence.html">FCFeynmanRegularizeDivergence</a>, <a href="../FCFeynmanParameterJoin.html">FCFeynmanParameterJoin</a>, <a href="../FCFeynmanParametrize.html">FCFeynmanParametrize</a>, <a href="../FCFeynmanPrepare.html">FCFeynmanPrepare</a>, <a href="../FCFeynmanProjectiveQ.html">FCFeynmanProjectiveQ</a>, <a href="../FCFeynmanProjectivize.html">FCFeynmanProjectivize</a> - derivation and manipulation of Feynman parameter integrals</li>
 <li><a href="../FCLoopAddEdgeTags.html">FCLoopAddEdgeTags</a>, <a href="../FCLoopGraphPlot.html">FCLoopGraphPlot</a>, <a href="../FCLoopIntegralToGraph.html">FCLoopIntegralToGraph</a>, <a href="../FCLoopPropagatorsToLineMomenta.html">FCLoopPropagatorsToLineMomenta</a> - create and plot graphs representing loop integrals</li>
 <li><a href="../FCLoopApplyTopologyMappings.html">FCLoopApplyTopologyMappings</a>, <a href="../FCLoopCreateRuleGLIToGLI.html">FCLoopCreateRuleGLIToGLI</a>, <a href="../FCLoopFindMomentumShifts.html">FCLoopFindMomentumShifts</a>, <a href="../FCLoopFindIntegralMappings.html">FCLoopFindIntegralMappings</a>, <a href="../FCLoopFindSubtopologies.html">FCLoopFindSubtopologies</a>, <a href="../FCLoopFindTopologies.html">FCLoopFindTopologies</a>, <a href="../FCLoopFindTopologyMappings.html">FCLoopFindTopologyMappings</a>, <a href="../FCLoopPakOrder.html">FCLoopPakOrder</a>, <a href="../FCLoopToPakForm.html">FCLoopToPakForm</a> - loop integral topology identification and minimization</li>
 <li><a href="../FCLoopBasisCreateScalarProducts.html">FCLoopBasisCreateScalarProducts</a> - auxiliary function that generates all possible loop momenta dependent scalar products</li>
