Fixed incorrect links to images.

--- a/FeynCalcBookDev/$VeryVerbose.html
+++ b/FeynCalcBookDev/$VeryVerbose.html
@@ -134,11 +134,11 @@
 <p><span class="math display">\text{Collect2: There are }6\text{ momomials to collect}</span></p>
 <p><span class="math display">\text{Collect2: Computing CoefficientArrays.}</span></p>
 <p><span class="math display">\text{Collect2: CoefficientArrays ready, timing: }0.000387</span></p>
-<p><embed src="img/1fqy7jqjvvk1u.pdf" /></p>
+<p><img src="img/1fqy7jqjvvk1u.svg" alt="1fqy7jqjvvk1u" /></p>
 <p><span class="math display">\text{Collect2: Collecting the monomials.}</span></p>
 <p><span class="math display">\text{Collect2: tvm: }\left\{x,x^2,x^3,x^4,x^5,x^6\right\}</span></p>
 <p><span class="math display">\text{Collect2: Done collecting the monomials, timing: }0.001726</span></p>
-<p><embed src="img/0gyiguncykrsk.pdf" /></p>
+<p><img src="img/0gyiguncykrsk.svg" alt="0gyiguncykrsk" /></p>
 <p><span class="math display">\text{Collect2: Obtaining the final result.}</span></p>
 <p><span class="math display">\text{Collect2: The final result is ready, timing: }0.001661</span></p>
 <p><span class="math display">\text{Collect2: new: }\;\text{FeynCalc$\grave{ }$Collect$\grave{ }$Private$\grave{ }$unity} x^6-6 \;\text{FeynCalc$\grave{ }$Collect$\grave{ }$Private$\grave{ }$unity} (y+z) x^5+15 \;\text{FeynCalc$\grave{ }$Collect$\grave{ }$Private$\grave{ }$unity} (y+z)^2 x^4-20 \;\text{FeynCalc$\grave{ }$Collect$\grave{ }$Private$\grave{ }$unity} (y+z)^3 x^3+15 \;\text{FeynCalc$\grave{ }$Collect$\grave{ }$Private$\grave{ }$unity} (y+z)^4 x^2-6 \;\text{FeynCalc$\grave{ }$Collect$\grave{ }$Private$\grave{ }$unity} (y+z)^5 x</span></p>
