FeynHelpers documentation updated.

--- a/FeynHelpersBookDev/Extra/Cite.html
+++ b/FeynHelpersBookDev/Extra/Cite.html
@@ -22,6 +22,20 @@
 <header id="title-block-header">
 <h1 class="title">FeynHelpers manual (development version)</h1>
 </header>
-
+<h2 id="citations">Citations</h2>
+<p>If you use FeynHelpers in your research, please cite</p>
+<ul>
+<li>V. Shtabovenko, <em>FeynHelpers: Connecting FeynCalc to FIRE and Package-X</em>, Comput. Phys. Commun., 218, 48-65, 2017, <a href="https://arxiv.org/abs/1611.06793">arXiv:1611.06793</a></li>
+</ul>
+<p>Apart from that, you should also provide the proper academic attribution to the authors of the tools that you are using via the interfaces provided by FeynHelpers. Please check out the respective websites for the proper citation instructions.</p>
+<p>The tools that should be cited are</p>
+<ul>
+<li><p><a href="https://home.bway.net/lewis/">FERMAT</a> if you are using <code>Fer*</code> functions</p></li>
+<li><p><a href="https://bitbucket.org/feynmanIntegrals/fire/">FIRE</a> if you are using <code>FIRE*</code> functions</p></li>
+<li><p><a href="https://packagex.hepforge.org/">Package-X</a> if you are using <code>PaX*</code> functions</p></li>
+<li><p><a href="https://secdec.readthedocs.io/en/stable/">pySecDec</a> if you are using <code>PSD*</code> functions</p></li>
+<li><p><a href="http://www.feynarts.de/looptools/">LoopTools</a> if you are using <code>LTools*</code> functions</p></li>
+<li><p><a href="http://cfif.ist.utl.pt/~paulo/qgraf.html">QGRAF</a> if you are using <code>QG*</code> functions</p></li>
+</ul>
 </body>
 </html>
