--- a/FeynHelpersBookDev/Extra/Install.html
+++ b/FeynHelpersBookDev/Extra/Install.html
@@ -22,6 +22,78 @@
 <header id="title-block-header">
 <h1 class="title">FeynHelpers manual (development version)</h1>
 </header>
-
+<h2 id="installation">Installation</h2>
+<p>The installation of FeynHelpers from scratch is a two step process. Apart from installing the actual FeynCalc addon (step 1) it is also necessary to set up the tools to which FeynHelpers provides FeynCalc interfaces (step 2).</p>
+<p>Due to the fact that these tools are written in different programming languages and usually must be compiled on user’s machine, it is not possible to fully automatize this second step. Instead, we expect the user to install the relevant tools manually.</p>
+<p>In the following we provide some relevant instructions but without any warranty that this will work on your machine. <em>If you are experiencing issues setting up a particular tools please contact the corresponding developer team.</em></p>
+<h3 id="feynhelpers">FeynHelpers</h3>
+<h4 id="automatic-installation">Automatic installation</h4>
+<ul>
+<li><p>Run the following instruction in a Kernel or Notebook session of Mathematica to install the stable version</p>
+<pre><code>Import[&quot;https://raw.githubusercontent.com/FeynCalc/feynhelpers/master/install.m&quot;]
+InstallFeynHelpers[]</code></pre></li>
+<li><p>If you like the bleeding edge and you are already using the development version of FeynCalc, you can also install the development version of FeynHelpers</p></li>
+</ul>
+<pre><code>Import[&quot;https://raw.githubusercontent.com/FeynCalc/feynhelpers/master/install.m&quot;]
+InstallFeynHelpers[InstallFeynHelpersDevelopmentVersion-&gt;True]</code></pre>
+<h4 id="manual-installation">Manual installation</h4>
+<ul>
+<li><p>Create a directory <em>FeynHelpers</em> inside</p>
+<pre><code>FileNameJoin[{$UserBaseDirectory, &quot;Applications&quot;, &quot;FeynCalc&quot;, &quot;AddOns&quot;}]</code></pre>
+<p>and put the source code there.</p></li>
+</ul>
+<h3 id="fermat">Fermat</h3>
+<p>You can download FERMAT binaries for Linux or macOS from the <a href="https://home.bway.net/lewis/zip.html">developer’s website</a>.</p>
+<h4 id="linux">Linux</h4>
+<ul>
+<li>Copy the directory <code>ferl64</code> to <code>FileNameJoin[{$UserBaseDirectory, "Applications", "FeynCalc", "AddOns", "FeynHelpers", "ExternalTools", "Fermat"}]</code>.</li>
+</ul>
+<h4 id="macos">macOS</h4>
+<ul>
+<li>Copy the directory <code>ferm64</code> to <code>FileNameJoin[{$UserBaseDirectory, "Applications", "FeynCalc", "AddOns", "FeynHelpers", "ExternalTools", "Fermat"}]</code>.</li>
+</ul>
+<h4 id="windows">Windows</h4>
+<ul>
+<li>Currently there is no native Windows version of FERMAT. The Linux version appears to be usable via WSL, but currently there is no support for that in FeynHelpers.</li>
+</ul>
+<h3 id="fire">FIRE</h3>
+<p>You can download the source code of FIRE from the <a href="https://bitbucket.org/feynmanIntegrals/fire">developer’s website</a>. The content should be extracted to <code>FileNameJoin[{$UserBaseDirectory, "Applications", "FIRE"}]</code>.</p>
+<h4 id="linux-1">Linux</h4>
+<ul>
+<li>The instructions for compiling FIRE from source on Linux are provided <a href="https://bitbucket.org/feynmanIntegrals/fire/src/master/README.html">here</a>.</li>
+</ul>
+<h4 id="macos-1">macOS</h4>
+<ul>
+<li>The instructions for compiling FIRE from source on macOS can be found <a href="https://bitbucket.org/feynmanIntegrals/fire/issues/10/issue-of-the-installation-on-macos">here</a>.</li>
+</ul>
+<h4 id="windows-1">Windows</h4>
+<ul>
+<li>There is no native Windows port of FIRE. It should be possible to compile FIRE on WSL with an Ubuntu installation, but currently there is no support for that in FeynHelpers.</li>
+</ul>
+<h3 id="looptools">LoopTools</h3>
+<p>On the <a href="http://www.feynarts.de/looptools/">developer’s website</a> you can download not only the source code but also precompiled binaries</p>
+<h4 id="linux-or-macos">Linux or macOS</h4>
+<ul>
+<li>Copy the self-compiled or precompiled MathLink executable <code>LoopTools</code> to <code>FileNameJoin[{$UserBaseDirectory, "Applications", "FeynCalc", "AddOns", "FeynHelpers", "ExternalTools", "LoopTools"}]</code>.</li>
+</ul>
+<h4 id="windows-2">Windows</h4>
+<ul>
+<li>Rename the self-compiled or precompiled MathLink executable <code>LoopTools.exe</code> to <code>LoopTools</code> and copy it to <code>FileNameJoin[{$UserBaseDirectory, "Applications", "FeynCalc", "AddOns", "FeynHelpers", "ExternalTools", "LoopTools"}]</code>.</li>
+</ul>
+<h3 id="pysecdec">pySecDec</h3>
+<p>The installation instructions for pySecDec can be found <a href="https://secdec.readthedocs.io/en/stable/installation.html#download-the-program-and-install">here</a>. FeynHelpers does not require pySecDec to <em>generate</em> the corresponding Python scripts. However, in order to actually compute the given loop integrals one has to run those scripts, which is possible only when pySecDec is installed.</p>
+<h4 id="linux-or-macos-1">Linux or macOS</h4>
+<p>It should be possible to install pySecDec via pip automatically.</p>
+<h4 id="windows-3">Windows</h4>
+<p>It could be possible to set up pySecDec on WSL, but currently it is unclear whether this can work.</p>
+<h3 id="package-x">Package-X</h3>
+<p>Currently the installation of Package-X is handled by the automatic installer. Since Package-X is a Mathematica package that only needs to be copied to the correct location, the installation is easy to automatize.</p>
+<p>Alternatively, you can download Package-X from the <a href="https://packagex.hepforge.org/">developer’s website</a> and copy the folder <code>X</code> to <code>FileNameJoin[{$UserBaseDirectory, "Applications"}]</code>. If you can load Package-X by evaluating <code>X`</code> in a notebook, then the installation was successful.</p>
+<h3 id="qgraf">QGRAF</h3>
+<p>You can download the source code of QFRAF from the <a href="http://cfif.ist.utl.pt/~paulo/qgraf.html">developer’s website</a>.</p>
+<h4 id="linux-and-macos">Linux and macOS</h4>
+<p>The compilation instructions can be found in the section “Compiling” of the manual <code>qgraf-3.6.0.pdf</code> inside the tarball. Having compiled the program you need to rename the binary to <code>qgraf</code> and put it to <code>FileNameJoin[{$UserBaseDirectory, "Applications", "FeynCalc", "AddOns", "FeynHelpers", "ExternalTools", "QGRAF", "Binary"}]</code>.</p>
+<h4 id="windows-4">Windows</h4>
+<p>You can download and install the <a href="https://sourceforge.net/projects/mingw-w64/files/mingw-w64">MinGW compiler</a>. Do not forget to change the architecture from i686 to x86_64 in the install wizard. Then it should be possible to compile QGRAF with statically linked libraries via <code>gfortran.exe -static qgraf-3.x.y.f08</code>. Finally rename the resulting binary to <code>qgraf.exe</code> and put it to <code>FileNameJoin[{$UserBaseDirectory, "Applications", "FeynCalc", "AddOns", "FeynHelpers", "ExternalTools", "QGRAF", "Binary"}]</code>.</p>
 </body>
 </html>
