Updated the front page.

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@ title: Home
 
     <p>FeynCalc is covered by the GNU General Public License 3.</p>
 
-    <p>Copyright &copy; 1990-2020 Rolf Mertig</p>
-    <p>Copyright &copy; 1997-2020 Frederik Orellana,</p>
-    Copyright &copy; 2014-2020 Vladyslav Shtabovenko</li></p>
+    <p>Copyright &copy; 1990-2022 Rolf Mertig</p>
+    <p>Copyright &copy; 1997-2022 Frederik Orellana,</p>
+    Copyright &copy; 2014-2022 Vladyslav Shtabovenko</li></p>
 
     <p>FeynCalc is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as
@@ -87,7 +87,7 @@ title: Home
 
     <p>We strive to keep all implemented functions documented in the <a href="/reference">reference guide</a>.</p>
 
-    <p>Questions can be posted in the <a href="/forum">forum</a>. New releases etc. are announced on the <a href="/news">news</a> page.</p>
+    <p>Questions can be posted in the <a href="https://github.com/FeynCalc/feyncalc/discussions">forum</a>.
 
     <p>To support FeynCalc, please acknowledge our work when you use FeynCalc in your research.
     You can do so by citing the following FeynCalc papers:</p>
@@ -102,11 +102,7 @@ title: Home
       <li><p>R. Mertig, M. B&ouml;hm, and A. Denner, "Feyn Calc - Computer-algebraic calculation of Feynman amplitudes",
             <a href="http://dx.doi.org/10.1016/0010-4655(91)90130-D">Comput. Phys. Commun., 64, 345-359, 1991</a>.</p></li>
     </ul>
-<!--
-    <p>You may also donate any amount for coffee and travel to the developers:</p>
-    <a href="https://feyncalc.org/donate.html">
-    <img class="paypal_button" alt="Make a donation to the FeynCalc Project using PayPal - it's fast, free and secure!" name="submit" src="Images/x-click-but04.gif"></a>
--->
+
   </div>
 </div>
 
